bobcat (5.09.00) 

  * DateTime::Zone::initialize was called to initialize a static data member
    which is used by DateTime constructors. When the DateTime object is
    statically constructed initialize may not yet have been called. Fixed in
    this release

  * The -q option was removed from the 'build' script.

  * Leftover .tar.gz extensions were removed from the man-pages

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jun 2021 15:32:14 +0200

bobcat (5.08.01) 

  * Fixed missing assignment of argv[0] to Arg__'s d_argv0 data member

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 May 2021 10:17:20 +0200

bobcat (5.08.00) 

  * Added new members to Arg and ArgConfig, optionally handling non-options as
    arguments and accessors returning arguments as iterators or as vectors of
    strings.

  * The member DateTime::Zone::thisZoneShift was not implemented: added to
    this release.

  * Minor changes to the DateTime man-page.

  * Changed A2x calls to corresponding std::string calls, updated man-pages
    accordingly.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 May 2021 12:10:47 +0200

bobcat (5.07.03)

  * The 'build light' command failed to complete because of a missing
    -pthread compiler flag: fixed in this release.

  * The concept Insertable in fmt/fmt still causes issues, and is for the time
    being no longer used.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 12 Mar 2021 10:48:16 +0100

bobcat (5.07.02)

  * The concept Insertable, defined in fmt/fmt, is temporarily not used:
    g++-11's version 11.0.0 doesn't handle it correctly, but the next release
    (g++ 11.0.1, cf. https://godbolt.org/z/P6hxcv) does (Thanks, Wiebe-Marten
    Wijnja, you saved my day ;-)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 04 Mar 2021 13:42:38 +0100

bobcat (5.07.01)

  * Cosmetic changes required by g++-11, among which a redefinition of
    the Insertable concept in fmt/fmt
