@@ -1,9 +1,12 @@
 #!/bin/bash
 
 # -I../../tmp -fconcepts \
-g++ --std=c++2a -Wall \
+
+g++ --std=c++2a -Wall -pthread \
     -fdiagnostics-color=never \
     $1 \
     -L../tmp -ldatetime \
-    -L/tmp -lbob -s
+    -lbobcat
+
+#    -L/tmp -lbob -s
 
