@@ -6,5 +6,6 @@ DateTime::Zone const &DateTime::Zone::store(
                                 string const &dstBegin, string const &dstEnd)
 {
     requireAlpha(name);
+    lock_guard<mutex> lg{ s_mutex };
     return storeIUO(name, shift, dstSpec, dstBegin, dstEnd);
 }
