@@ -1,13 +1,19 @@
-bobcat (5.09.00) 
+bobcat (5.09.01) 
 
   * DateTime::Zone::initialize was called to initialize a static data member
-    which is used by DateTime constructors. When the DateTime object is
+    which is used by DateTime constructors. When a DateTime object is
     statically constructed initialize may not yet have been called. Fixed in
     this release
 
   * The -q option was removed from the 'build' script.
 
   * Leftover .tar.gz extensions were removed from the man-pages
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Jul 2021 08:46:33 +0200
+
+bobcat (5.09.00) 
+
+  * unreleased: DateTime fixes (see 5.09.01) were incorrect.
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jun 2021 15:32:14 +0200
 
